--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "dependencies": {
     "@artsy/fresnel": "^1.2.1",
     "classnames": "^2.2.6",
-    "next": "9.5.2",
+    "emailjs-com": "^2.6.3",
+    "next": "9.5.3",
+    "nodemailer": "^6.4.11",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
+    "toastify": "^2.0.1",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
@@ -38,27 +42,27 @@
     "@babel/plugin-proposal-throw-expressions": "7.10.4",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@testing-library/jest-dom": "^5.11.3",
-    "@testing-library/react": "^10.4.8",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.2",
     "@types/classnames": "^2.2.10",
-    "@types/jest": "^26.0.9",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.48",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.4",
+    "@types/react": "^16.9.49",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "babel-jest": "^26.3.0",
-    "eslint": "^7.6.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "husky": "^4.2.5",
-    "jest": "^26.4.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
+    "jest": "^26.4.2",
+    "lint-staged": "^10.3.0",
+    "prettier": "^2.1.1",
     "react-test-renderer": "^16.13.1",
-    "ts-jest": "^26.2.0"
+    "ts-jest": "^26.3.0"
   }
 }
