--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
-    "toastify": "^2.0.1",
+    "toastify-js": "^1.9.1",
     "typescript": "^4.0.2"
   },
   "devDependencies": {
