--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "forms/ContactMeForm/index.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "forms/ContactMeForm/index.tsx", "components/HomePageCard/index.jsx"],
   "exclude": ["node_modules"]
 }
