--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@artsy/fresnel": "^1.4.0",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "emailjs-com": "^2.6.4",
     "next": "10.2.0",
