--- a/package.json
+++ b/package.json
@@ -19,51 +19,51 @@
     ]
   },
   "dependencies": {
-    "@artsy/fresnel": "^3.1.0",
-    "axios": "^0.24.0",
+    "@artsy/fresnel": "^6.1.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "emailjs-com": "^3.2.0",
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
-    "toastify-js": "^1.11.2",
-    "typescript": "^4.4.4"
+    "semantic-ui-react": "^2.1.3",
+    "toastify-js": "^1.12.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.16.0",
-    "@babel/plugin-proposal-decorators": "7.16.0",
-    "@babel/plugin-proposal-export-namespace-from": "7.16.0",
-    "@babel/plugin-proposal-function-sent": "7.16.0",
-    "@babel/plugin-proposal-json-strings": "7.16.0",
-    "@babel/plugin-proposal-numeric-separator": "7.16.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.0",
-    "@babel/plugin-proposal-throw-expressions": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-decorators": "7.18.10",
+    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
+    "@babel/plugin-proposal-function-sent": "7.18.6",
+    "@babel/plugin-proposal-json-strings": "7.18.6",
+    "@babel/plugin-proposal-numeric-separator": "7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.18.9",
+    "@babel/plugin-proposal-throw-expressions": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/plugin-syntax-import-meta": "7.10.4",
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^12.1.2",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "@types/classnames": "^2.3.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.7",
-    "@types/react": "^17.0.34",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
-    "babel-jest": "^27.3.1",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "lint-staged": "^11.2.6",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "^17.0.2",
-    "ts-jest": "^27.0.7"
+    "@types/jest": "^28.1.7",
+    "@types/node": "^18.7.6",
+    "@types/react": "^18.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "babel-jest": "^28.1.3",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^28.0.8"
   }
 }
