--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "@artsy/fresnel": "^6.1.0",
-    "axios": "^0.27.2",
+    "axios": "^1.3.3",
     "classnames": "^2.3.2",
-    "emailjs-com": "^3.2.0",
     "next": "^13.1.6",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "scss": "^0.2.4",
@@ -50,7 +50,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/classnames": "^2.3.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "^18.13.0",
+    "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
