--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "scss": "^0.2.4",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "toastify-js": "^1.12.0",
-    "typescript": "^4.9.5"
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.18.6",
@@ -52,18 +51,23 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.52.0",
     "babel-jest": "^29.4.3",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "jest": "^29.4.3",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
     "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.5"
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   }
 }
