--- a/package.json
+++ b/package.json
@@ -1,73 +1,69 @@
 {
-  "name": "personal-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "heroku-postbuild": "npm run build"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix"
-    ]
-  },
-  "dependencies": {
-    "@artsy/fresnel": "^6.1.0",
-    "axios": "^1.3.3",
-    "classnames": "^2.3.2",
-    "next": "^13.1.6",
-    "nodemailer": "^6.9.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "scss": "^0.2.4",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4",
-    "toastify-js": "^1.12.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "7.18.6",
-    "@babel/plugin-proposal-decorators": "7.21.0",
-    "@babel/plugin-proposal-export-namespace-from": "7.18.9",
-    "@babel/plugin-proposal-function-sent": "7.18.6",
-    "@babel/plugin-proposal-json-strings": "7.18.6",
-    "@babel/plugin-proposal-numeric-separator": "7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@babel/plugin-proposal-throw-expressions": "7.18.6",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-syntax-import-meta": "7.10.4",
-    "@babel/plugin-transform-runtime": "^7.21.0",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@types/classnames": "^2.3.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.0",
-    "@types/react": "^18.0.28",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "babel-jest": "^29.4.3",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard-with-typescript": "^34.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "husky": "^8.0.3",
-    "jest": "^29.4.3",
-    "lint-staged": "^13.1.2",
-    "prettier": "^2.8.4",
-    "react-test-renderer": "^18.2.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
-  }
+	"name": "personal-website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --fix"
+		],
+		"*.js": "eslint --cache --fix"
+	},
+	"dependencies": {
+		"@artsy/fresnel": "^6.1.0",
+		"axios": "^1.3.3",
+		"classnames": "^2.3.2",
+		"next": "^13.1.6",
+		"nodemailer": "^6.9.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"scss": "^0.2.4",
+		"semantic-ui-css": "^2.5.0",
+		"semantic-ui-react": "^2.1.4",
+		"toastify-js": "^1.12.0"
+	},
+	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "7.18.6",
+		"@babel/plugin-proposal-decorators": "7.21.0",
+		"@babel/plugin-proposal-export-namespace-from": "7.18.9",
+		"@babel/plugin-proposal-function-sent": "7.18.6",
+		"@babel/plugin-proposal-json-strings": "7.18.6",
+		"@babel/plugin-proposal-numeric-separator": "7.18.6",
+		"@babel/plugin-proposal-optional-chaining": "^7.21.0",
+		"@babel/plugin-proposal-throw-expressions": "7.18.6",
+		"@babel/plugin-syntax-dynamic-import": "7.8.3",
+		"@babel/plugin-syntax-import-meta": "7.10.4",
+		"@babel/plugin-transform-runtime": "^7.21.0",
+		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-typescript": "^7.21.0",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^14.0.0",
+		"@types/classnames": "^2.3.0",
+		"@types/jest": "^29.4.0",
+		"@types/node": "^18.14.0",
+		"@types/react": "^18.0.28",
+		"@typescript-eslint/eslint-plugin": "^5.53.0",
+		"@typescript-eslint/parser": "^5.53.0",
+		"babel-jest": "^29.4.3",
+		"eslint": "^8.34.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.6.1",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2",
+		"husky": "^8.0.3",
+		"jest": "^29.4.3",
+		"lint-staged": "^13.1.2",
+		"prettier": "^2.8.4",
+		"react-test-renderer": "^18.2.0",
+		"ts-jest": "^29.0.5",
+		"typescript": "^4.9.5"
+	}
 }
