--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:@typescript-eslint/recommended",
+		"plugin:@next/next/recommended",
 		"prettier"
 	],
 	"rules": {
