--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@babel/plugin-transform-runtime": "^7.21.0",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.21.0",
+		"@next/eslint-plugin-next": "^13.1.6",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@types/classnames": "^2.3.0",
