--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
 		"*.js": "eslint --cache --fix"
 	},
 	"dependencies": {
-		"@artsy/fresnel": "^6.1.0",
+		"@artsy/fresnel": "^8.1.0",
 		"axios": "^1.3.3",
 		"classnames": "^2.3.2",
-		"next": "^13.1.6",
-		"nodemailer": "^6.9.1",
+		"motion": "^12.23.12",
+		"next": "^14.2.15",
+		"nodemailer": "^7.0.5",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"scss": "^0.2.4",
@@ -29,42 +30,42 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-class-properties": "7.18.6",
-		"@babel/plugin-proposal-decorators": "7.21.0",
+		"@babel/plugin-proposal-decorators": "7.28.0",
 		"@babel/plugin-proposal-export-namespace-from": "7.18.9",
-		"@babel/plugin-proposal-function-sent": "7.18.6",
+		"@babel/plugin-proposal-function-sent": "7.27.1",
 		"@babel/plugin-proposal-json-strings": "7.18.6",
 		"@babel/plugin-proposal-numeric-separator": "7.18.6",
 		"@babel/plugin-proposal-optional-chaining": "^7.21.0",
-		"@babel/plugin-proposal-throw-expressions": "7.18.6",
+		"@babel/plugin-proposal-throw-expressions": "7.27.1",
 		"@babel/plugin-syntax-dynamic-import": "7.8.3",
 		"@babel/plugin-syntax-import-meta": "7.10.4",
 		"@babel/plugin-transform-runtime": "^7.21.0",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.21.0",
-		"@next/eslint-plugin-next": "^13.1.6",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^14.0.0",
+		"@next/eslint-plugin-next": "^15.5.0",
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
 		"@types/classnames": "^2.3.0",
-		"@types/jest": "^29.4.0",
-		"@types/node": "^18.14.0",
-		"@types/react": "^18.0.28",
-		"@typescript-eslint/eslint-plugin": "^5.53.0",
-		"@typescript-eslint/parser": "^5.53.0",
-		"babel-jest": "^29.4.3",
-		"eslint": "^8.34.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-config-standard-with-typescript": "^34.0.0",
+		"@types/jest": "^30.0.0",
+		"@types/node": "^24.3.0",
+		"@types/react": "^18.2.0",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"babel-jest": "^30.0.5",
+		"eslint": "^8.57.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-config-standard-with-typescript": "^43.0.1",
 		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-n": "^15.6.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-n": "^17.21.3",
+		"eslint-plugin-prettier": "^5.5.4",
+		"eslint-plugin-promise": "^7.2.1",
 		"eslint-plugin-react": "^7.32.2",
-		"husky": "^8.0.3",
-		"jest": "^29.4.3",
-		"lint-staged": "^13.1.2",
-		"prettier": "^2.8.4",
-		"react-test-renderer": "^18.2.0",
+		"husky": "^9.1.7",
+		"jest": "^30.0.5",
+		"lint-staged": "^16.1.5",
+		"prettier": "^3.6.2",
+		"react-test-renderer": "18.2.0",
 		"ts-jest": "^29.0.5",
-		"typescript": "^4.9.5"
+		"typescript": "^5.9.2"
 	}
 }
